--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,5 +19,11 @@ body{
 	justify-content: space-between;
 }
 .main .contenido article{
-	flex: 0 0 calc( 33.3% - 2rem);
+	flex:  0 0 100%;
+}
+
+@media only screen and (min-width: 768px){
+	.main .contenido article{
+		flex: 0 0 calc( 33.3% - 2rem);
+	}	
 }
