--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,17 +13,24 @@ body{
 	font: normal 16px "Open Sans", Arial, Helvetica, Sans-serif;
 }
 
-.main .contenido{
+.main .curso{
 	display:  flex;
 	flex-wrap:  wrap;
-	justify-content: space-between;
 }
-.main .contenido article{
+.main .curso article{
+	max-width:  300px;
 	flex:  0 0 100%;
+	margin-right: 2rem;
+	box-shadow:  0px 0px 16px -4px rgba(0, 0, 0, .25)
+}
+.main .curso article h3,
+.main .curso article h4{
+	text-align: center;
+}
+@media only screen and (min-width: 768px){
+	.main .curso article{
+		flex: 0 0 calc( 33.3% - 2rem);
+	}
 }
 
-@media only screen and (min-width: 768px){
-	.main .contenido article{
-		flex: 0 0 calc( 33.3% - 2rem);
-	}	
-}
+
